--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,11 @@
-server:
-  error:
-    include-message: always
-    include-binding-errors: always
-
 spring:
   datasource:
-    password: root
-    url: jdbc:postgresql://localhost:5432/e-com-database
-    username: postgres
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-    show-sql: true
+    url: jdbc:h2:mem:testDb
+    username: test
+    password:
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+server:
+  port: 8081
